css/styles.css
/* ----BASIC STYLES---- */
body {
    background-color: #d5c3ff;
    font-family: 'Jost', Tahoma, Geneva, Verdana, sans-serif;
    font-size: large;
    min-height: 98vh;
    padding: 2%;
    padding-left: 10%;
}

h1 {
    color: #6229DB;
}

a {
    color: #8B3777;
    text-decoration: none;
}
a:active {
    color: #8a54ff;
}

img {
    border: 2px solid white;
   border-radius: 10px;
   display: flex;
   justify-self: center;
   width: 70%;
}

/* ---- <<HOME PAGE>> PROJECTS & BLOGS GRID LAYOUT---- */
.collection-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    gap: .65em;
    min-width: 100vh;
}
.thumbnail {
    border-radius: 8px;
    flex: 0 1 calc(40% - 10px);
    padding: 20px 16px;
    overflow: hidden;
    margin-top: .65em;
}
/* add border and hover styles to blog items */
.blog {
    background-color: #c2a6ff;
    border: 1.5px solid #9c7cdfa3;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: transform 0.2s, box-shadow 0.2s;
}
.blog img {
    width: 100%;
    border-radius: 8px 8px 0px 0px;
}
.blog:hover {
  box-shadow: 0 0 12px 2px #6229db66, 0 0 28px 4px rgba(139, 55, 119, 0.2);
}
/* add border and hover styles to project items */
.project {
    border: 1.5px solid rgba(98, 41, 219, .64);
    box-shadow: 0 0 12px 2px rgba(98, 41, 219, 0.4), 0 0 28px 4px rgba(139, 55, 119, 0.2);
    transition: transform 0.2s, box-shadow 0.2s;
}
.project:hover {
    animation: slide 0.75s ease-in;
}
@keyframes slide {
    0% {transform: translateY(0);}
    50% {transform: translateY(-1.25em);}
    100% {transform: translateY(0);}
}
/* styles "view all" link displaying after collection items in home */
/* .view-all-link {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin: 1rem;
} */







/* UNORGANIZED STYLES BELOW */
/* a.thumbnail {
    display: flex;
    justify-content: center;
    margin-top: 1em;
} */

header {
    grid-column: 1 / 2;
}
.main-nav li {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

/* classes */
.initial a {
    font-family: "Fascinate Inline", system-ui, sans-serif;
    font-size: 4.5rem;
    color: #6229DB;
}
.my-name a  {
    font-family: "Fascinate Inline", system-ui, sans-serif;
    font-size: 4.5rem;
    color: #6229DB;
}
/* .my-name a:visited {
    color: #6229DB;
} */

.nav-item {
    font-family: "Story Script", system-ui, sans-serif;
    font-weight: bold;
    font-size: 3em;
}
.nav-item a:hover, a:active {
    background-color: #c0a2ff;
    text-decoration: underline;
    padding: .2em;
}

.nav-item.active a {
    background-color: #c0a2ff;
    border-radius: 15px;
    padding: .2em;
}
.professional-summ {
    margin-top: .5em;
}
.section-title {
    font-family: "Story Script", system-ui, sans-serif;
    margin-top: 1em;
    font-size: 425%;
}

.main-nav {
    height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    margin: 0;
    padding: 0;
}


@media screen and (min-width: 640px) {
body {
    flex-direction: row;
}

header,main {
    width: 65%;
}
main {
    font-size: 125%;
    padding-bottom: 80px;
}
nav {
    grid-row: 1 / span 2;
    grid-column: 2;
    height: 100%;
    position: fixed;
    top: 0;
    right: 0;
    height: 100vh;
    width: 30%;
    z-index: 1000;
}
}

/* 
@media screen and (min-width: 700px) {
    .container {
        flex-direction: row;
        flex-wrap: wrap;
    }
} */

